--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -1,5 +1,6 @@
 {# SPDX-License-Identifier: AGPL-3.0-or-later #}
 {% extends "browser/base.html" %}
+{% load django_bootstrap5 %}
 {% block head %}
     <title>{{ videoid }} | SB Browser</title>
 {% endblock head %}
@@ -11,6 +12,9 @@
             </div>
         </div>
         <div class="col-auto">
+            {% if not submissions %}
+                {% bootstrap_alert 'No submissions exist for this video, check that the Video ID is correct and when the database was last updated.' dismissible=False extra_classes='mb-1' %}
+            {% endif %}
             <ul class="list-group">
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }} <span title="Segments that are also not sent to users, but don't count as ignored">+ {{ hidden }} ❓</span></li>
