Fix navbar vertical alignment

--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -18,16 +18,20 @@
             <div class="col">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand ms-2" href="/">
-                            <img src="{% static 'browser/logo.png' %}" alt="Logo" class="d-inline-block">
-                            SB Browser
+                        <a class="navbar-brand d-flex align-items-center ms-2" href="/">
+                            <div class="flex-shrink-0">
+                                <img src="{% static 'browser/logo.png' %}" alt="Logo">
+                            </div>
+                            <div class="flex-grow-1 ms-1">
+                                SB Browser
+                            </div>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="/database">Database download</a>
+                                <a class="nav-link active pb-1" aria-current="page" href="/database">Database download</a>
                             </div>
                         </div>
                         <button class="btn btn-secondary me-2" id="darkmode" title="Dark mode toggle">Dark/Light</button>
