Fix Error 153 on YouTube video embed and also consider using nocookie version

--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -8,7 +8,7 @@
     <div class="row mt-2">
         <div class="col-12 col-md-6 col-lg-4">
             <div class="ratio ratio-16x9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ videoid }}?rel=0" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/{{ videoid }}?rel=0" allowfullscreen allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
         </div>
         <div class="col-auto">
