--- a/browser/templates/browser/uuid.html
+++ b/browser/templates/browser/uuid.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 mt-2">
             <div class="ratio ratio-16x9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ videoid }}?rel=0&start={{ start }}&end={{ end }}#requiredSegment={{ uuid.uuid }}" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/{{ videoid }}?rel=0&start={{ start }}&end={{ end }}#requiredSegment={{ uuid.uuid }}" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
         </div>
         <div class="col-auto mt-2">
